--- a/src/app.scss
+++ b/src/app.scss
@@ -3,39 +3,55 @@
     margin: 0;
 }
 
+.app {
+    min-height: 100vh;
+    background: radial-gradient(ellipse at top, #002233, #0066ff),
+        radial-gradient(ellipse at bottom, #002233, #0066ff);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
 
 .title {
     padding: 5%;
     h6 {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+            sans-serif;
         font-size: 2rem;
         text-align: center;
+        color: rgba(#ffffff, 0.7);
+        transition: all 0.4s;
+        cursor: default;
+        &:hover {
+            color: #ffffff;
+        }
     }
 }
 
 .main-container {
     display: flex;
+    background-color: rgba(#ffffff, 0.7);
+    border-radius: 20px;
+    padding: 10px 4rem;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    max-width: 1400px;
-    margin: auto;
+    max-width: calc(min(1440px, 90%));
+    margin: 0 auto;
+    min-height: 60vh;
     .add-todo-container {
         display: block;
         margin-bottom: 2rem;
     }
 }
 
-.items-container {
-    display: flex;
-    width:100%;
-    .unchecked-container {
-        padding: 5%;
-        width:50%;
-    }
-    .checked-container {
-        padding: 5%;
-        width:50%;
-    }
+.unchecked-container {
+    padding: 1rem 2rem;
 }
-
+.checked-container {
+    padding: 1rem 2rem;
+}
+.list-container {
+    min-width: 80%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, min-content));
+    justify-content: center;
+}
