--- a/src/components/TodoElement/todoElement.scss
+++ b/src/components/TodoElement/todoElement.scss
@@ -1,16 +1,55 @@
 .todo-item {
-    display:flex;
-    flex-direction: column;
-    padding: 2% 0;
-    margin: 2% 0;
-    border-bottom:1px solid gray;
-    border-top: 1px solid gray;
-    .todo-item-check {
-        justify-content: center;
-        align-items: center;
+    display: flex;
+    flex-direction: row;
+    margin: 0.4rem 2rem;
+
+    background-color: white;
+    &-task {
+        flex-basis: 1;
+        font-weight: 400;
+        width: 80%;
+        margin: auto 1rem;
+        min-width: 5rem;
     }
-    .todo-item-delete {
+    &-check {
         justify-content: center;
         align-items: center;
+        background-image: linear-gradient(to right, #019267, #00c897);
+        background-size: 600%;
+        background-position-x: 0%;
+        background-position-y: 0%;
+        color: #fff;
+        border: none;
+        outline: none;
+        padding: 0.75rem 1.5rem;
+        cursor: pointer;
+        transition: all 1s;
+        &:hover {
+            background-position-x: 100%;
+            background-position-y: 100%;
+        }
+    }
+    &-delete {
+        justify-content: center;
+        align-items: center;
+        justify-content: center;
+        align-items: center;
+        background-image: linear-gradient(to right, #ff7272, #9b0000);
+        background-size: 600%;
+        background-position-x: 0%;
+        background-position-y: 0%;
+        color: #fff;
+        border: none;
+        outline: none;
+        padding: 0.75rem 1.5rem;
+        cursor: pointer;
+        transition: all 1s;
+        &:hover {
+            background-position-x: 100%;
+            background-position-y: 100%;
+        }
+    }
+    &-button-container {
+        display: flex;
     }
 }
